bug 9206 - search box was cropping text vertically (r=mattc)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@9340 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/bindings/search.css
+++ b/app/skin/bindings/search.css
@@ -91,8 +91,8 @@ searchbar
   width: 4em;
   min-width: 4em;
   border: none !important;
-  margin: 0px;
-  padding: 0px 0px 0px 0px;
+  margin: 1px 0px 1px 2px;
+  padding: 0px 0px 1px 0px;
 }
 
 
